cleaned up modal exits, font spacing and size. mobile popover fixed, but not dynamic. NTF: modal heights

--- a/index-style.css
+++ b/index-style.css
@@ -37,32 +37,20 @@ h1{
 }
 
 .modal-body {
-  max-height: 420px;
+  /*max-height: 420px;*/
   overflow-y: auto;
 }
 
-body .modal-dialog { /* Width */
-    max-width: 80%;
-    width: auto !important;
-    display: inline-block;
-}
 
-.modal.in{
-     text-align: center;
-}
-
-/*#blankBody {
-  color: #2797b3;
-  margin: 15px;
-}*/
 
 .modal-body p{
-  font-size: 15px;
+  font-size: 17px;
   color: #8db0b9;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   margin-left: 15px;
   margin-right: 15px;
   text-align: left;
+  line-height: 1.2;
 }
 
 .modal-body b{
@@ -100,7 +88,13 @@ body .modal-dialog { /* Width */
 
 
 /*====RESPONSIVE STYLING=====*/
-/*@media screen and (max-width: 299px) { #blankBody { font-size: 70%; } }*/
+@media screen and (min-width: 200px){
+  h1 {font-size: 12px}
+}
+
+@media screen and (min-width: 400px){
+  h1 {font-size: 17px}
+}
 
 @media screen and (max-width: 500px){
   #blankBody {font-size: 80%;}
@@ -111,14 +105,18 @@ body .modal-dialog { /* Width */
 }
 
 @media screen and (min-width: 600px){
+  .modal-body { max-height: 420px; }
   #blankBody {font-size: 95%;}
+  /*h1 {font-size: 20px}*/
 }
 
 @media screen and (min-width: 760px){
+  .modal-body { max-height: 520px; }
   #blankBody {font-size: 90%;}
 }
 
 @media screen and (min-width: 1000px){
   #blankBody {font-size: 20px;}
-  /*.popover-content {placement: top;}*/
+  .modal-body { max-height: 620px; }
+  h1 {font-size: 30px}
 }
